--- a/Lyric Scraping.ipynb
+++ b/Lyric Scraping.ipynb
@@ -2,40 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "headers = {'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.87 Safari/537.36'}\n",
-    "wiki = requests.get('https://en.wikipedia.org/wiki/List_of_one-hit_wonders_in_the_United_States', headers=headers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bs4 import BeautifulSoup\n",
-    "soup = BeautifulSoup(wiki.text, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import requests\n",
+    "import re"
    ]
   },
   {
@@ -44,8 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "songhtml = soup.find_all('li')[14:580]\n",
-    "songs = [dict(zip(['Artist', 'Song'], [eachItem.getText() for eachItem in eachSong.find_all('a')[:2]])) for eachSong in songhtml]"
+    "headers = {\n",
+    "    'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.87 Safari/537.36'}\n",
+    "wiki = requests.get(\n",
+    "    'https://en.wikipedia.org/wiki/List_of_one-hit_wonders_in_the_United_States', headers=headers)\n"
    ]
   },
   {
@@ -54,7 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lyricSearch = requests.get(f\"https://www.google.com/search?q={songs[35]['Artist']} {songs[35]['Song']} lyrics\", headers=headers)"
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(wiki.text, 'html.parser')\n"
    ]
   },
   {
@@ -63,101 +38,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lyricSoup = BeautifulSoup(lyricSearch.text, 'html.parser')"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "songhtml = soup.find_all('li')[14:580]\n",
+    "songs = [dict(zip(['Artist', 'Song'], [eachItem.getText()\n",
+    "              for eachItem in eachSong.find_all('a')[:2]])) for eachSong in songhtml]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lyricSearch = requests.get(\n",
+    "    f\"https://www.google.com/search?q={songs[35]['Artist']} {songs[35]['Song']} lyrics\", headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lyricSoup = BeautifulSoup(lyricSearch.text, 'html.parser')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = ''.join([eachPart.getText() for eachPart in lyricSoup.find_all(\"div\", {\"class\": \"BNeawe tAd8D AP7Wnd\"})])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "songtest = songs[1:4].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "for eachSong in songtest:\n",
+    "    lyricSearch = requests.get(\n",
+    "    f\"https://www.google.com/search?q={eachSong['Artist']} {eachSong['Song']} lyrics\", headers=headers)\n",
+    "    lyricSoup = BeautifulSoup(lyricSearch.text, 'html.parser')\n",
+    "    eachSong['Lyrics'] = ''.join([eachPart.getText() for eachPart in lyricSoup.find_all(\"div\", {\"class\": \"BNeawe tAd8D AP7Wnd\"})][:-1])\n",
+    "    time.sleep(.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<div class=\"BNeawe tAd8D AP7Wnd\"><div><div class=\"BNeawe tAd8D AP7Wnd\">Teen angel, teen angel, teen angel, ooh\n",
-       " That fateful night the car was stalled upon the railroad track\n",
-       " I pulled you out and we were safe, but you went running back\n",
-       " \n",
-       " Teen angel, can you hear me?\n",
-       " Teen angel, can you see me?\n",
-       " Are you somewhere up above?\n",
-       " And I am still your own true love?\n",
-       " </div></div></div>,\n",
-       " <div class=\"BNeawe tAd8D AP7Wnd\">Teen angel, teen angel, teen angel, ooh\n",
-       " That fateful night the car was stalled upon the railroad track\n",
-       " I pulled you out and we were safe, but you went running back\n",
-       " \n",
-       " Teen angel, can you hear me?\n",
-       " Teen angel, can you see me?\n",
-       " Are you somewhere up above?\n",
-       " And I am still your own true love?\n",
-       " </div>,\n",
-       " <div class=\"BNeawe tAd8D AP7Wnd\"><div><div class=\"BNeawe tAd8D AP7Wnd\">Teen angel, teen angel, teen angel, ooh\n",
-       " That fateful night the car was stalled upon the railroad track\n",
-       " I pulled you out and we were safe, but you went running back\n",
-       " \n",
-       " Teen angel, can you hear me?\n",
-       " Teen angel, can you see me?\n",
-       " Are you somewhere up above?\n",
-       " And I am still your own true love?\n",
-       " \n",
-       " What was it you were looking for that took your life that night?\n",
-       " They said they found my high school ring clutched in your fingers tight\n",
-       " \n",
-       " Teen angel, can you hear me?\n",
-       " Teen angel, can you see me?\n",
-       " Are you somewhere up above?\n",
-       " And I am still your own true love?\n",
-       " \n",
-       " Just sweet sixteen, and now you're gone\n",
-       " They've taken you away\n",
-       " I'll never kiss your lips again\n",
-       " They buried you today\n",
-       " \n",
-       " Teen angel, can you hear me?\n",
-       " Teen angel, can you see me?\n",
-       " Are you somewhere up above?\n",
-       " And I am still your own true love?\n",
-       " \n",
-       " Teen angel, teen angel, answer me, please</div></div></div>,\n",
-       " <div class=\"BNeawe tAd8D AP7Wnd\">Teen angel, teen angel, teen angel, ooh\n",
-       " That fateful night the car was stalled upon the railroad track\n",
-       " I pulled you out and we were safe, but you went running back\n",
-       " \n",
-       " Teen angel, can you hear me?\n",
-       " Teen angel, can you see me?\n",
-       " Are you somewhere up above?\n",
-       " And I am still your own true love?\n",
-       " \n",
-       " What was it you were looking for that took your life that night?\n",
-       " They said they found my high school ring clutched in your fingers tight\n",
-       " \n",
-       " Teen angel, can you hear me?\n",
-       " Teen angel, can you see me?\n",
-       " Are you somewhere up above?\n",
-       " And I am still your own true love?\n",
-       " \n",
-       " Just sweet sixteen, and now you're gone\n",
-       " They've taken you away\n",
-       " I'll never kiss your lips again\n",
-       " They buried you today\n",
-       " \n",
-       " Teen angel, can you hear me?\n",
-       " Teen angel, can you see me?\n",
-       " Are you somewhere up above?\n",
-       " And I am still your own true love?\n",
-       " \n",
-       " Teen angel, teen angel, answer me, please</div>,\n",
-       " <div class=\"BNeawe tAd8D AP7Wnd\">https://www.youtube.com/watch?v=wuE5j9ijeS4</div>]"
+       "[{'Artist': 'The Crows',\n",
+       "  'Song': 'Gee',\n",
+       "  'Lyrics': \"Do do-do do, do-do do, do-do  do-do-do\\nDo do-do do, do-do do, do-do  do-do-do\\nDo do-do do, do-do do, do-do  do-do-do do\\nLove that girl\\n\\nOh Gee, my oh Gee, well o-o Gee\\nWhy I love that girl, love that girl\\n\\nOh please, listen to me, hear-hear-hear my plea\\nWhy I love that girl\\n\\nHold me, Baby, squeeze me\\nNever let me goDo do-do do, do-do do, do-do  do-do-do\\nDo do-do do, do-do do, do-do  do-do-do\\nDo do-do do, do-do do, do-do  do-do-do do\\nLove that girl\\n\\nOh Gee, my oh Gee, well o-o Gee\\nWhy I love that girl, love that girl\\n\\nOh please, listen to me, hear-hear-hear my plea\\nWhy I love that girl\\n\\nHold me, Baby, squeeze me\\nNever let me goDo do-do do, do-do do, do-do  do-do-do\\nDo do-do do, do-do do, do-do  do-do-do\\nDo do-do do, do-do do, do-do  do-do-do do\\nLove that girl\\n\\nOh Gee, my oh Gee, well o-o Gee\\nWhy I love that girl, love that girl\\n\\nOh please, listen to me, hear-hear-hear my plea\\nWhy I love that girl\\n\\nHold me, Baby, squeeze me\\nNever let me go\\nI'm not takin' chances\\nBecause I love her, I love her so\\n\\nOh Gee, yes I love her, Yes I need her\\nWhy I love that girl, love that girl\\n\\nHold me, Baby, squeeze me\\nNever let me go\\nI'm not takin' chances\\nBecause I love her,  I love her so\\n\\nMy-my oh Gee, well o Gee, my-eye oh Gee\\nWhy I love that girl, love that girl\\n\\nOh please, listen to me, hear-ear my plea\\nWhy I love that girl, love that girl\\n\\nWhy I love that girlDo do-do do, do-do do, do-do  do-do-do\\nDo do-do do, do-do do, do-do  do-do-do\\nDo do-do do, do-do do, do-do  do-do-do do\\nLove that girl\\n\\nOh Gee, my oh Gee, well o-o Gee\\nWhy I love that girl, love that girl\\n\\nOh please, listen to me, hear-hear-hear my plea\\nWhy I love that girl\\n\\nHold me, Baby, squeeze me\\nNever let me go\\nI'm not takin' chances\\nBecause I love her, I love her so\\n\\nOh Gee, yes I love her, Yes I need her\\nWhy I love that girl, love that girl\\n\\nHold me, Baby, squeeze me\\nNever let me go\\nI'm not takin' chances\\nBecause I love her,  I love her so\\n\\nMy-my oh Gee, well o Gee, my-eye oh Gee\\nWhy I love that girl, love that girl\\n\\nOh please, listen to me, hear-ear my plea\\nWhy I love that girl, love that girl\\n\\nWhy I love that girl\"},\n",
+       " {'Artist': 'Penguins',\n",
+       "  'Song': 'Earth Angel',\n",
+       "  'Lyrics': \"Earth Angel, earth angel\\nWill you be mine?\\nMy darling dear, love you all the time\\nI'm just a fool, A fool in love with you\\n\\nEarth Angel, earth angel\\nThe one I adore\\nLove you forever, and evermore\\nI'm just a fool, A fool in love with you\\n\\nI fell for you and I knew the vision of  your love, lovelinessEarth Angel, earth angel\\nWill you be mine?\\nMy darling dear, love you all the time\\nI'm just a fool, A fool in love with you\\n\\nEarth Angel, earth angel\\nThe one I adore\\nLove you forever, and evermore\\nI'm just a fool, A fool in love with you\\n\\nI fell for you and I knew the vision of  your love, lovelinessEarth Angel, earth angel\\nWill you be mine?\\nMy darling dear, love you all the time\\nI'm just a fool, A fool in love with you\\n\\nEarth Angel, earth angel\\nThe one I adore\\nLove you forever, and evermore\\nI'm just a fool, A fool in love with you\\n\\nI fell for you and I knew the vision of  your love, loveliness\\nI hoped and I prayed that someday\\nI'll be the vision of your hap-happiness\\n\\nOh oh Earth Angel, earth angel\\nPlease be mine\\nMy darling dear, love you all the time\\nI'm just a fool, A fool in love with you\\n\\nI fell for you and I knew the vision of your loveliness\\nI hoped and prayed that someday\\nThat I'll be the vision of your happiness\\n\\nEarth Angel, earth angel\\nPlease be mine\\nMy darling dear, love you all the time\\nI'm just a fool, A fool in love with youEarth Angel, earth angel\\nWill you be mine?\\nMy darling dear, love you all the time\\nI'm just a fool, A fool in love with you\\n\\nEarth Angel, earth angel\\nThe one I adore\\nLove you forever, and evermore\\nI'm just a fool, A fool in love with you\\n\\nI fell for you and I knew the vision of  your love, loveliness\\nI hoped and I prayed that someday\\nI'll be the vision of your hap-happiness\\n\\nOh oh Earth Angel, earth angel\\nPlease be mine\\nMy darling dear, love you all the time\\nI'm just a fool, A fool in love with you\\n\\nI fell for you and I knew the vision of your loveliness\\nI hoped and prayed that someday\\nThat I'll be the vision of your happiness\\n\\nEarth Angel, earth angel\\nPlease be mine\\nMy darling dear, love you all the time\\nI'm just a fool, A fool in love with you\"},\n",
+       " {'Artist': 'The Chords',\n",
+       "  'Song': 'Sh-Boom',\n",
+       "  'Lyrics': \"Life could be a dream\\nLife could be a dream\\nDo-roo-do-do, sh-boom\\n\\nLife could be a dream\\nSh-boom, if I could take you to a paradise up above\\nIf you will tell me I'm the only one that you love\\nLife could be a dream, sweetheart, hello, hello again\\nSh-boom and hopin' we'll meet again, boom\\n\\nLife could be a dreamLife could be a dream\\nLife could be a dream\\nDo-roo-do-do, sh-boom\\n\\nLife could be a dream\\nSh-boom, if I could take you to a paradise up above\\nIf you will tell me I'm the only one that you love\\nLife could be a dream, sweetheart, hello, hello again\\nSh-boom and hopin' we'll meet again, boom\\n\\nLife could be a dreamLife could be a dream\\nLife could be a dream\\nDo-roo-do-do, sh-boom\\n\\nLife could be a dream\\nSh-boom, if I could take you to a paradise up above\\nIf you will tell me I'm the only one that you love\\nLife could be a dream, sweetheart, hello, hello again\\nSh-boom and hopin' we'll meet again, boom\\n\\nLife could be a dream\\nIf only all my precious plans would come true\\nIf you would let me spend my whole life loving you\\nLife could be a dream, sweetheart (do-roo-do-do, sh-boom)\\n\\nEvery time I look at you\\nSomething is on my mind\\nIf you do what I want you to\\nBaby, we could be so fine\\n\\nOh, life could be a dream\\nSh-boom, if I could take you to a paradise up above\\nSh-boom, and tell me, darling, I'm the only one that you love\\nLife could be a dream, sweetheart, hello, hello again\\nSh-boom and hopin' we'll meet again, boom\\n\\nOh, life could be a dream\\nLife could be a dream, sweetheart\\n\\nDo-roo-do-do, sh-boom\\nDo-roo-do-do, sh-boom\\nDo-roo-do-do, sh-boom\\nDo-roo-do-do, sh-boom\\nDo-roo-do-do, sh-boom\\nDo-roo-do-do, sh-boom\\nDo-roo-do-do, sh-boom\\n\\nWhoa, life could be a dream\\nSh-boom, if I could take you up to paradise up above\\nSh-boom, and tell me, darling, I'm the only one that you love\\nLife could be a dream, sweetheart, hello, hello again\\nSh-boom and hopin' we'll meet again, boom\\n\\nOh, life could be a dream\\nLife could be a dream\\nDo-roo-do-do, sh-boomLife could be a dream\\nLife could be a dream\\nDo-roo-do-do, sh-boom\\n\\nLife could be a dream\\nSh-boom, if I could take you to a paradise up above\\nIf you will tell me I'm the only one that you love\\nLife could be a dream, sweetheart, hello, hello again\\nSh-boom and hopin' we'll meet again, boom\\n\\nLife could be a dream\\nIf only all my precious plans would come true\\nIf you would let me spend my whole life loving you\\nLife could be a dream, sweetheart (do-roo-do-do, sh-boom)\\n\\nEvery time I look at you\\nSomething is on my mind\\nIf you do what I want you to\\nBaby, we could be so fine\\n\\nOh, life could be a dream\\nSh-boom, if I could take you to a paradise up above\\nSh-boom, and tell me, darling, I'm the only one that you love\\nLife could be a dream, sweetheart, hello, hello again\\nSh-boom and hopin' we'll meet again, boom\\n\\nOh, life could be a dream\\nLife could be a dream, sweetheart\\n\\nDo-roo-do-do, sh-boom\\nDo-roo-do-do, sh-boom\\nDo-roo-do-do, sh-boom\\nDo-roo-do-do, sh-boom\\nDo-roo-do-do, sh-boom\\nDo-roo-do-do, sh-boom\\nDo-roo-do-do, sh-boom\\n\\nWhoa, life could be a dream\\nSh-boom, if I could take you up to paradise up above\\nSh-boom, and tell me, darling, I'm the only one that you love\\nLife could be a dream, sweetheart, hello, hello again\\nSh-boom and hopin' we'll meet again, boom\\n\\nOh, life could be a dream\\nLife could be a dream\\nDo-roo-do-do, sh-boom\"}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lyricSoup.find_all(\"div\", {\"class\": \"BNeawe tAd8D AP7Wnd\"})"
+    "songtest"
    ]
   },
   {
